<resources>
    <string name="app_name">Adventure App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_user_sign_up_here">New User? Sign Up Here</string>
    <string name="logo">Logo</string>
    <string name="welcome_start_your">Welcome, Start Your</string>
    <string name="adventure">Adventure</string>
    <string name="dream_explore_discover">Dream. Explore. Discover.</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="start_your">Start Your</string>
    <string name="start">Start</string>
    <string name="your">Your</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="sign_up_with_google">sign up with google</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="dark_mode">dark mode</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign out</string>
    <string name="adventure_with_us">AdvenTour with us</string>
    <string name="search_text">Search...</string>
    <string name="cart">Cart</string>
    <string name="location">Select City</string>
    <string name="packages">Tour Packages</string>
    <string name="activities">Activities</string>
    <string name="featured_activities">Featured Activities</string>
    <string name="featured_description">Explore all the fun activities and places with us...</string>
    <string name="tour_packages">Tour Packages</string>
    <string name="tour_package_description">Explore all the customized tour packages with us...</string>
    <string name="view_all">View all</string>
    <string name="tickets">Your Tickets</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Your Profile</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="logo_name">AdvenTour</string>
    <string name="sajjangarh">Sajjangarh</string>
    <string name="quantity">Quantity</string>
    <string name="brew_tea">ADD TO CART</string>
    <string name="initial_cost">$0.00</string>
    <string name="initial_quantity_value">1</string>
    <string name="total">Total</string>
    <string name="price">PRICE: </string>
    <string name="action_cart">Shopping Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="fragrance_name">Fragrance Name</string>


</resources>