<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_home_24"
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:id="@+id/nav_cart"
            android:title="@string/cart" />
        <item
            android:icon="@drawable/ticket_nav"
            android:id="@+id/nav_tickets"
            android:title="@string/tickets"/>
        <item
            android:icon="@drawable/ic_baseline_contacts_24"
            android:id="@+id/nav_contact_us"
            android:title="@string/contact_us" />
        <item
            android:icon="@drawable/about_us"
            android:id="@+id/nav_about_us"
            android:title="@string/about_us" />
<!--
        <item
            android:icon="@drawable/feedback"
            android:id="@+id/nav_feedback"
            android:title="@string/feedback" />
-->


    </group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">

                <item

                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item

                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

    <item android:title="Share">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:icon="@drawable/share_menu"
                    android:id="@+id/nav_share"
                    android:title="@string/share" />
                <item
                    android:icon="@drawable/rate_us_menu_icon"
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us" />
            </group>
        </menu>
    </item>

</menu>