<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp"
    >

    <RelativeLayout

        android:layout_width="340dp"
        android:layout_height="140dp"
        android:padding="10dp"
        android:background="@color/banner_background_light">

    <ImageView
        android:id="@+id/cartImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/fragranceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_toRightOf="@+id/cartImage"
        android:layout_marginTop="20dip"
        android:fontFamily="@font/baloo"
        android:text="@string/fragrance_name"
        android:textColor="@color/black"

        />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/item_space"
        android:textSize="16sp"
        android:text="@string/quantity"
        android:layout_below="@+id/fragranceName"
        android:layout_toEndOf="@+id/cartImage"
        android:layout_toRightOf="@+id/cartImage"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="@dimen/item_space"
        android:textSize="16sp"
        android:text="@string/price"
        android:layout_below="@+id/quantity"
        android:fontFamily="@font/roboto_medium"
        android:layout_toEndOf="@+id/cartImage"
        android:layout_toRightOf="@+id/cartImage"
        android:textColor="@color/black"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>